--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "yup": "^1.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:json": "json-server --watch db.json --port 5001",
+    "start:app": "react-scripts start",
+    "start": "npm-run-all -p start:json start:app",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,6 +46,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "json-server": "^1.0.0-beta.3",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
