--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "yup": "^1.7.0"
   },
   "scripts": {
-    "start:json": "json-server --watch db.json --port 5001",
-    "start:app": "react-scripts start",
-    "start": "npm-run-all -p start:json start:app",
+    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
